--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mozaik-ext-twitter",
-  "version": "0.0.1",
+  "version": "0.0.1-beta",
   "description": "Mozaik twitter widgets",
   "repository": {
     "type": "git",
