--- a/package.json
+++ b/package.json
@@ -1,43 +1,52 @@
 {
   "name": "mozaik-ext-twitter",
-  "version": "0.0.9-beta",
+  "version": "1.0.0",
   "description": "Mozaik twitter widgets",
   "repository": {
     "type": "git",
     "url": "git://github.com/plouc/mozaik-ext-twitter"
   },
+  "license": "MIT",
   "author": {
     "name": "Raphaël Benitte",
     "url": "https://github.com/plouc"
   },
-  "engines": {
-    "node": "0.10.x"
-  },
   "homepage": "https://github.com/plouc/mozaik-ext-twitter",
+  "main": "./lib/components/index.js",
+  "engines": {
+    "node": "0.12.x"
+  },
   "dependencies": {
     "bluebird": "^2.9.9",
     "chalk": "^0.5.1",
     "convict": "^0.6.1",
+    "twitter": "^1.2.1",
     "lodash": "^3.2.0",
-    "moment": "^2.9.0",
-    "twitter": "^1.2.1"
-  },
-  "main": "./components.js",
-  "scripts": {
-    "prepublish": "gulp lib"
-  },
-  "devDependencies": {
-    "del": "^1.1.1",
-    "gulp": "^3.8.11",
-    "gulp-6to5": "^3.0.0",
-    "gulp-plumber": "^0.6.6",
-    "gulp-regex-replace": "^0.2.3",
-    "gulp-rename": "^1.2.0",
-    "gulp-strip-debug": "^1.0.2",
-    "react": "^0.12.2",
+    "moment": "^2.10.3",
+    "react": "^0.13.3",
+    "react-mixin": "^1.7.0",
     "reflux": "^0.2.5"
   },
+  "devDependencies": {
+    "babel": "^5.8.12",
+    "babel-eslint": "^1.0.6",
+    "chai": "^3.2.0",
+    "eslint": "^0.15.1",
+    "jsdom": "^2.0.0",
+    "mocha": "^2.2.5",
+    "mockery": "^1.4.0",
+    "sinon": "^1.15.4"
+  },
   "peerDependencies": {
-    "mozaik": "*"
+    "mozaik": "1.x"
+  },
+  "scripts": {
+    "test": "mocha --opts mocha.opts ./src/tests/**/*.test.js",
+    "eslint": "eslint ./src/*"
+  },
+  "browserify": {
+    "transform": [
+      "babelify"
+    ]
   }
 }
